--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@chakra-ui/react": "^1.3.2",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "firebase": "^8.2.7",
     "formik": "^2.2.6",
     "framer-motion": "^3.3.0",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-firebaseui": "^4.1.0",
     "react-icons": "^4.2.0",
     "slate": "^0.59.0",
     "slate-history": "^0.59.0",
