--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-firebase-hooks": "^2.2.0",
     "react-firebaseui": "^4.1.0",
+    "react-hook-form": "^6.15.1",
     "react-icons": "^4.2.0",
     "slate": "^0.59.0",
     "slate-history": "^0.59.0",
     "slate-react": "^0.59.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
-    "@types/node": "^14.14.25",
+    "@types/node": "^14.14.27",
     "@types/react": "^17.0.1",
     "typescript": "^4.1.4"
   }
