--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^0.2.38",
     "@chakra-ui/react": "^1.3.2",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "aws-amplify": "^3.3.18",
     "firebase": "^8.2.7",
     "formik": "^2.2.6",
     "framer-motion": "^3.3.0",
