--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^0.2.38",
-    "@chakra-ui/react": "^1.3.2",
+    "@chakra-ui/react": "^1.3.3",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@reduxjs/toolkit": "^1.5.0",
     "aws-amplify": "^3.3.18",
     "firebase": "^8.2.7",
     "formik": "^2.2.6",
@@ -23,6 +24,7 @@
     "react-firebaseui": "^4.1.0",
     "react-hook-form": "^6.15.1",
     "react-icons": "^4.2.0",
+    "react-redux": "^7.2.2",
     "slate": "^0.59.0",
     "slate-history": "^0.59.0",
     "slate-react": "^0.59.0",
